/*
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 */

syntax = "proto3";

message PojoModel {
  repeated PojoListUser listListUser = 1;
  repeated PojoMapUser listMapUser = 2;
  map<string, PojoListUser> mapListUser = 3;
  map<string, PojoMapUser> mapMapUser = 4;

  repeated PojoListListUser listListListUser = 5;
  repeated PojoListMapUser listListMapUser = 6;
  repeated PojoMapListUser listMapListUser = 7;
  repeated PojoMapMapUser listMapMapUser = 8;
  map<string, PojoListListUser> mapListListUser = 9;
  map<string, PojoListMapUser> mapListMapUser = 10;
  map<string, PojoMapListUser> mapMapListUser = 11;
  map<string, PojoMapMapUser> mapMapMapUser = 12;
}

message ProtoModel {
  repeated ProtoListUser listListUser = 1;
  repeated ProtoMapUser listMapUser = 2;
  map<string, ProtoListUser> mapListUser = 3;
  map<string, ProtoMapUser> mapMapUser = 4;

  repeated ProtoListListUser listListListUser = 5;
  repeated ProtoListMapUser listListMapUser = 6;
  repeated ProtoMapListUser listMapListUser = 7;
  repeated ProtoMapMapUser listMapMapUser = 8;
  map<string, ProtoListListUser> mapListListUser = 9;
  map<string, ProtoListMapUser> mapListMapUser = 10;
  map<string, ProtoMapListUser> mapMapListUser = 11;
  map<string, ProtoMapMapUser> mapMapMapUser = 12;
}

//@WrapProperty
message PojoListListUser {
  repeated PojoListUser value = 1;
}

//@WrapProperty
message PojoListMapUser {
  repeated PojoMapUser value = 1;
}

//@WrapProperty
message PojoMapListUser {
  map<string, PojoListUser> value = 1;
}

//@WrapProperty
message PojoMapMapUser {
  map<string, PojoMapUser> value = 1;
}

//@WrapProperty
message PojoListUser {
  repeated User value = 1;
}

//@WrapProperty
message PojoMapUser {
  map<string, User> value = 1;
}

message User {
  string name = 1;
}

message ProtoListListUser {
  repeated ProtoListUser value = 1;
}

message ProtoListMapUser {
  repeated ProtoMapUser value = 1;
}

message ProtoMapListUser {
  map<string, ProtoListUser> value = 1;
}

message ProtoMapMapUser {
  map<string, ProtoMapUser> value = 1;
}

message ProtoListUser {
  repeated User value = 1;
}

message ProtoMapUser {
  map<string, User> value = 1;
}
